--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,8 @@
-.card{
-  border: 1px solid black; 
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px black;
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  max-width: 250px;
-  display: inline-block;
-}
-
-.card .card-image{
-  width: 150px;
-  height: auto;
-}
-
-.card .card-title{
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  color: black;
-}
-
-.card .card-text{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
+.button{
+    background-color: green;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: auto;
+    cursor: pointer;
 }
