--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-.button{
-    background-color: green;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: auto;
-    cursor: pointer;
+.student{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
+    padding: 10px;
+    border: 1px solid black;
+}
+.student p{
+    margin: 0;
 }
