--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+
+.Welcome-message{
+    font-size: 2.5em;
+    background-color: green;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0;
+}
+
+.login-prompt{
+    font-size: 2.5em;
+    background-color: red;
+    color: black;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0;
+}
+
 .student{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
